http-echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: hello-world
spec:
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: hello-world
spec:
  selector:
    matchLabels:
      app: echo
  replicas: 2
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-text=Hello World. These are K8s, kong-ingress-controller, postgress and cert-manager"
          ports:
            - containerPort: 5678
            # It will forward traffic to containerPort
